fix(annotations): fix layout problem for annotation details pane
Fixes #178.

--- a/src/neuroglancer/ui/annotations.css
+++ b/src/neuroglancer/ui/annotations.css
@@ -16,7 +16,7 @@
 
 .neuroglancer-annotations-tab {
   display: flex;
-  align-items: flex-start;
+  align-items: stretch;
   flex: 1;
   flex-direction: column;
 }
@@ -36,11 +36,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-}
-
-.neuroglancer-annotations-stack {
-  flex: 1;
-  align-self: stretch;
+  align-items: stretch;
 }
 
 .neuroglancer-annotation-icon {
